[gd_scene load_steps=20 format=3 uid="uid://bu4do6gatvb0p"]

[ext_resource type="PackedScene" uid="uid://cqljg717mr2em" path="res://RayPickerCamera/ray_picker_camera.tscn" id="1_knq2t"]
[ext_resource type="MeshLibrary" uid="uid://cslkxmctddnv" path="res://MeshLibraries/SpaceLibrary.tres" id="1_lvb7b"]
[ext_resource type="PackedScene" uid="uid://cqx0o5lovomkb" path="res://Enemy/enemy.tscn" id="2_5x8ra"]
[ext_resource type="PackedScene" uid="uid://cxp15nah6flwq" path="res://Base/base.tscn" id="3_o2j4u"]
[ext_resource type="Script" uid="uid://bmebjqoyvqlej" path="res://enemy_path.gd" id="3_ufkdr"]
[ext_resource type="Script" uid="uid://jdsp0o717nbn" path="res://turret_manager.gd" id="5_cwwxe"]
[ext_resource type="PackedScene" uid="uid://c4li4xf6h5jir" path="res://Turret/turret.tscn" id="6_ufkdr"]
[ext_resource type="FontFile" uid="uid://7c6o0d5qn18f" path="res://Assets/Fonts/Asap/static/Asap-Bold.ttf" id="8_clh6v"]
[ext_resource type="Script" uid="uid://cpria7juxk1nj" path="res://bank.gd" id="8_tv3th"]
[ext_resource type="PackedScene" uid="uid://phc00s0d3dj2" path="res://DifficultyManager/difficulty_manager.tscn" id="9_xkmwr"]
[ext_resource type="PackedScene" uid="uid://drd53y1nneu0y" path="res://UserInterface/victory_layer.tscn" id="10_now27"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dq0bh"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_lvb7b"]
sky_material = SubResource("ProceduralSkyMaterial_dq0bh")

[sub_resource type="Environment" id="Environment_5x8ra"]
background_mode = 2
sky = SubResource("Sky_lvb7b")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lvb7b"]
albedo_color = Color(0.560784, 0.6, 0.301961, 1)

[sub_resource type="Curve3D" id="Curve3D_lvb7b"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -22.7167, 0, 5.85491, -0.606127, 0, 0.95083, 0.606127, 0, -0.95083, 13.926, 0, 5.85491, 0.858684, 0, 0.911672, -0.858684, 0, -0.911672, 13.9797, 0, -1.97794, 0.557943, 0, 0.665645, -0.557943, 0, -0.665645, -10.0017, 0, -2.03159, 0, 0, 0, 0, 0, 0, -10.0017, 0, -5.89437),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_now27"]
albedo_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="Theme" id="Theme_3qhxs"]
default_font = ExtResource("8_clh6v")

[sub_resource type="LabelSettings" id="LabelSettings_epnn3"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5x8ra")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
size = Vector3(100, 2, 100)
material = SubResource("StandardMaterial3D_lvb7b")

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("gridmap", "turret_manager") instance=ExtResource("1_knq2t")]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 14.5, 9.5)
gridmap = NodePath("../GridMap")
turret_manager = NodePath("../TurretManager")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_lvb7b")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65534, 0, 65535, 2, 0, 65531, 65535, 0, 4, 65535, 0, 65531, 65534, 0, 65532, 65534, 0, 0, 2, 0, 1, 2, 655363, 2, 2, 0, 3, 2, 1048578, 4, 2, 2, 4, 1, 0, 4, 0, 0, 3, 65534, 0, 4, 65534, 0, 2, 65534, 655363, 1, 65534, 0, 0, 65534, 0, 65531, 0, 0, 65531, 2, 655362, 65532, 2, 655363, 65533, 2, 0, 65534, 2, 0, 65534, 65534, 0, 65532, 65535, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 3, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 65530, 0, 2, 65529, 0, 2, 65528, 0, 2, 65528, 65535, 2, 65528, 65534, 2, 65528, 65533, 2, 65528, 65532, 2, 65528, 65531, 2, 65529, 65531, 2, 65530, 65531, 2, 65530, 65532, 2, 65530, 65533, 2, 65530, 65534, 2, 65530, 65535, 2, 65529, 65535, 2, 65529, 65534, 2, 65529, 65533, 2, 65529, 65532, 2, 65531, 65531, 2, 65531, 65532, 2, 65532, 65532, 2, 65533, 65533, 2, 65534, 65533, 2, 65535, 65533, 2, 0, 65533, 2, 1, 65533, 2, 2, 65533, 2, 2, 65532, 2, 3, 65532, 2, 4, 65532, 2, 4, 65533, 2, 3, 65533, 2, 65532, 65533, 2, 65531, 65533, 2, 65532, 65531, 2, 65533, 65531, 2, 65534, 65531, 2, 65535, 65531, 2, 0, 65531, 2, 1, 65531, 2, 2, 65531, 2, 1, 65532, 2, 0, 65532, 2, 65535, 65532, 2, 65534, 65532, 2, 4, 65531, 2, 3, 65531, 2, 5, 65533, 2, 5, 65534, 2, 5, 65535, 2, 5, 0, 2, 6, 0, 2, 6, 65535, 2, 7, 65535, 2, 7, 65534, 2, 7, 65533, 2, 7, 65532, 2, 7, 65531, 2, 6, 65531, 2, 5, 65531, 2, 5, 65532, 2, 6, 65532, 2, 6, 65533, 2, 6, 65534, 2, 7, 0, 2, 65533, 65532, 2)
}

[node name="EnemyPath" type="Path3D" parent="." node_paths=PackedStringArray("difficulty_manager", "victory_layer")]
curve = SubResource("Curve3D_lvb7b")
script = ExtResource("3_ufkdr")
enemy_scene = ExtResource("2_5x8ra")
difficulty_manager = NodePath("../DifficultyManager")
victory_layer = NodePath("../VictoryLayer")

[node name="Road" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1, 0, -1, 0.1, 1, 0.1, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_now27")

[node name="LeftEdge" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1.1, 0, -1.1, 0.15, -0.9, 0.15, -0.9, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="LeftEdge2" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(0.9, 0, 0.9, 0.15, 1.1, 0.15, 1.1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Timer" type="Timer" parent="EnemyPath"]
wait_time = 2.0
autostart = true

[node name="Base" parent="." instance=ExtResource("3_o2j4u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0017, 0, -5.89437)

[node name="TurretManager" type="Node3D" parent="." node_paths=PackedStringArray("enemy_path")]
script = ExtResource("5_cwwxe")
turret = ExtResource("6_ufkdr")
enemy_path = NodePath("../EnemyPath")

[node name="Bank" type="MarginContainer" parent="." groups=["bank"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_3qhxs")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("8_tv3th")

[node name="Label" type="Label" parent="Bank"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "placeholder"
label_settings = SubResource("LabelSettings_epnn3")
uppercase = true

[node name="DifficultyManager" parent="." instance=ExtResource("9_xkmwr")]
game_length = 180.0

[node name="VictoryLayer" parent="." instance=ExtResource("10_now27")]
visible = false

[connection signal="timeout" from="EnemyPath/Timer" to="EnemyPath" method="spawn_enemy"]
[connection signal="stop_spawning_enemies" from="DifficultyManager" to="EnemyPath" method="_on_difficulty_manager_stop_spawning_enemies"]
